--- a/Aula05/estados.html
+++ b/Aula05/estados.html
@@ -59,6 +59,25 @@
         <li><a href="riograndenorte.html"> Rio Grande do Norte</a></li>
         <li><a href="sergipe.html"> Sergipe</a></li>
      </ul>
+
+      <h3>Região Norte</h3>
+
+    <p>
+      A Região Norte do Brasil é a maior em área e abriga a maior parte da Floresta Amazônica, famosa pela sua biodiversidade.
+      É formada por sete estados: Acre, Amapá, Amazonas, Pará, Rondônia, Roraima e Tocantins. A economia depende muito da extração
+      de recursos naturais, pesca e turismo ecológico. A cultura é rica e diversa, com fortes influências indígenas e festas
+      tradicionais como o Círio de Nazaré no Pará. Os rios são essenciais para o transporte e a vida das comunidades locais.
+    </p>
+
+     <ul>
+      <li><a href="acre.html"> Acre</a></li>
+      <li><a href="amazonas.html"> Amazonas</a></li>
+      <li><a href="amapá.html"> Amapá</a></li>
+      <li><a href="para.html"> Pará</a></li>
+      <li><a href="rondonia.html"> Rondônia</a></li>
+      <li><a href="roraima.html"> Roraima</a></li>
+      <li><a href="tocantins.html"> Tocantins</a></li>
+    </ul>
     
 </body>
 </html>
