--- a/Aula05/bahia.html
+++ b/Aula05/bahia.html
@@ -8,7 +8,7 @@
 <body>
     
    <h1>Bem Vindo a Bahia</h1>
-   <p>Claro! A Bahia é um estado do Nordeste do Brasil, conhecido por sua rica cultura afro-brasileira, belas praias e história
+   <p>A Bahia é um estado do Nordeste do Brasil, conhecido por sua rica cultura afro-brasileira, belas praias e história
      importante como a primeira capital do país, Salvador. Tem forte influência africana na música, religião
       (como o candomblé) e culinária. O Carnaval baiano é famoso por sua energia e tradição.</p>
 
