--- a/Aula05/ceara.html
+++ b/Aula05/ceara.html
@@ -9,7 +9,7 @@
 
   <h1>Bem Vindo ao Ceará</h1>
 
-   <p>Claro! O Ceará é um estado do Nordeste brasileiro, com capital em Fortaleza. É famoso pelas belas praias como Jericoacoara,
+   <p>O Ceará é um estado do Nordeste brasileiro, com capital em Fortaleza. É famoso pelas belas praias como Jericoacoara,
      clima quente e pela cultura do forró e festas de São João. A economia se destaca na agricultura, indústria têxtil e turismo.</p>
 
    <p><img src="Ceará.jpg" width="700"></p>
