--- a/Aula05/estados.html
+++ b/Aula05/estados.html
@@ -78,6 +78,26 @@
       <li><a href="roraima.html"> Roraima</a></li>
       <li><a href="tocantins.html"> Tocantins</a></li>
     </ul>
+
+     <h3>Região Centro-Oestes</h3>
+
+    <p>A Região Centro-Oeste do Brasil é composta por Goiás, Mato Grosso, Mato Grosso do Sul e o Distrito Federal, onde está
+       localizada Brasília, a capital do país. É uma região de grande extensão territorial, marcada por paisagens do Cerrado, 
+       pelo Pantanal (a maior planície alagável do mundo) e partes da Amazônia no norte de Mato Grosso.
+
+      O clima predominante é tropical, com uma estação seca no inverno e chuvosa no verão. A economia da região é fortemente 
+      baseada no agronegócio, sendo uma das maiores produtoras de soja, milho, algodão e carne bovina do país. Além disso, o Distrito
+       Federal se destaca por ser o centro político e administrativo do Brasil.
+      
+      A região também tem crescido em áreas como logística, energia e turismo ecológico, especialmente com destinos como 
+      o Pantanal, Chapada dos Veadeiros e Bonito.
+    </p>
     
+     <ul>
+       <li><a href="distritof.html"> Distrito Federal</a></li>
+       <li><a href="goias.html"> Goiás</a></li>
+       <li><a href="mtsul.html"> Mato Grosso do Sul</a></li>
+       <li><a href="matogrosso.html"> Mato Grosso</a></li>
+     </ul>    
 </body>
 </html>
