--- a/Aula07/exercicio1.html
+++ b/Aula07/exercicio1.html
@@ -54,6 +54,9 @@
 <body>
     
     <h1 class="titulo">Página de Exercícios de CSS</h1>
+    <a href=""><span style="color: blue;">Início</span></a>
+    <a href=""><span style="color: blue;">Sobre</span></a>
+    <a href=""><span style="color: blue;">Contato</span></a>
 
     <h2 class="margem">1. Parágrafos e Cores</h2>
 
