--- a/Aula07/exercicio2.html
+++ b/Aula07/exercicio2.html
@@ -50,6 +50,11 @@
            border-collapse: collapse;
            padding: 5px;
         }
+
+        .larguratotal
+        {
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -64,14 +69,46 @@
 
       <p class="tamanho">Estoque de Produtos</p>
 
-      <table>
+      <table class="larguratotal">
         <tr>
             <th class="cor">Produto</th>
             <th class="cor">Categoria</th>
             <th class="cor">Preço</th>
             <th class="cor">Disponibilidade</th>
         </tr>
-      </table>
+
+        <tr>
+            <td style="background-color: rgb(248, 140, 140);"><b>Mouse</b></td>
+            <td style="background-color: rgb(248, 140, 140);">Periféricos</td>
+            <td style="background-color: rgb(248, 140, 140);">R$80,00</td>
+            <td style="background-color: rgb(248, 140, 140);">Em estoque</td>
+        </tr>
+
+        <tr>
+            <td style="background-color: rgb(141, 255, 106);">Teclado</td>
+            <td style="background-color: rgb(141, 255, 106);">Periféricos</td>
+            <td style="background-color: rgb(217, 236, 75);">R$120,00</td>
+            <td style="background-color: rgb(141, 255, 106);">Fora de estoque</td>
+        </tr>
+        <tr>
+            <td style="background-color: rgb(248, 140, 140);"><i>Monitor</i></td>
+            <td style="background-color: rgb(248, 140, 140);">Display</td>
+            <td style="background-color: rgb(248, 140, 140);">R$850,00</td>
+            <td style="background-color: rgb(248, 140, 140);"><u>Em reposição</u></td>
+        </tr>
+
+        <tr>
+            <td style="background-color: rgb(141, 255, 106);">Headset</td>
+            <td style="background-color: rgb(141, 255, 106);">Áudio</td>
+            <td style="background-color: rgb(141, 255, 106);">R$210,00</td>
+            <td style="background-color: rgb(141, 255, 106);">Em estoque</td>
+        </tr>
+     </table>
+     <p>Tarefas:</p>
+    <ul>
+     <li>Adicione duas novas linhas de produto e aplique <span class="tamanho2">.negrito, .italico, .sublinhado</span> conforme desejar.</li>
+     <li>Aplique a classe <span  class="tamanho2">.destaque</span> em uma célula diferente e observe o efeito.</li>
+    </ul>
     </div>
 
 </body>
