--- a/Aula08/exemplo2.html
+++ b/Aula08/exemplo2.html
@@ -13,6 +13,24 @@
             text-decoration: none;
         }
 
+        h3
+        {
+            text-transform: capitalize;
+            color: rgb(58, 226, 215);
+        }
+
+        .t1
+        {
+            text-transform: uppercase;
+            color: rgb(46, 122, 149);
+        }
+
+        .t2
+        {
+            text-transform: lowercase;
+            color: rgb(49, 148, 176);
+        }
+
     </style>
 </head>
 <body>
@@ -22,11 +40,11 @@
    <h3>Exemplos de transformação do texto</h3>
 
    <p>
-    Emanuele de Melo Almeida Felipe
+    Aluno: <span class="t1">Emanuele de Melo Almeida Felipe</span>
    </p>
 
    <p>
-    Curso: MTEC em Informática para Internet
+    Curso: <span class="t2">MTEC em Informática para Internet</span>
    </p>
 
    <p>
