--- a/Aula08/index.html
+++ b/Aula08/index.html
@@ -23,8 +23,8 @@
    <ul>
      <li><a href="exemplo1.html">Exemplo 1</a>: Text Decoration</li>
      <li><a href="exemplo2.html">Exemplo 2</a>: Text Transformation</li>
-     <li><a href="#">Exemplo 3</a>: Text Spacing</li>
-     <li><a href="#">Exemplo 4</a>: Text Shadow</li>
+     <li><a href="exemplo3.html">Exemplo 3</a>: Text Spacing</li>
+     <li><a href="exemplo4.html">Exemplo 4</a>: Text Shadow</li>
    </ul>
 
    <p>Aqui estão alguns exemplos de como aplicar essas propriedades CSS em seus
@@ -32,7 +32,7 @@
    </p>
 
    <ul>
-     <li><a href="#">Exemplo 5</a>: Font Family</li>
+     <li><a href="exemplo5.html">Exemplo 5</a>: Font Family</li>
      <li><a href="#">Exemplo 6</a>: Text Size</li>
    </ul>
 
