--- a/Aula08/index.html
+++ b/Aula08/index.html
@@ -33,7 +33,8 @@
 
    <ul>
      <li><a href="exemplo5.html">Exemplo 5</a>: Font Family</li>
-     <li><a href="#">Exemplo 6</a>: Text Size</li>
+     <li><a href="exemplo6.html">Exemplo 6</a>: Box Model</li>
+     <li><a href="">Exemplo 7</a></li>
    </ul>
 
 
