--- a/Aula08/exemplo6.html
+++ b/Aula08/exemplo6.html
@@ -5,12 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+       body
+       {
+        background-color: rgb(211, 210, 210);
+        margin: 0;
+        padding: 0;
+        font-size: 20px;
+       }
 
+       .camada1
+       {
+        background-color: rgb(51, 207, 246);
+        color: white;
+
+        margin-top: 30px;
+        margin-bottom: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+       }
+
+       .camada2
+       {
+        background-color: cornflowerblue;
+        color: white;
+
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-bottom: 30px;
+        padding-right: 30px;
+        margin-bottom: 50px;
+       }
+
+       .camada3
+       {
+        background-color: rgb(41, 158, 231);
+        color: white;
+
+        width: 300px;
+        height: 300px;
+        text-align: center;
+
+        margin-right: auto;
+        margin-left: auto;
+       }
+
+       .camada4
+       {
+        background-color: rgb(70, 160, 163);
+        border: 2px solid rgb(63, 108, 147);
+
+        width: 50%;
+        margin: 30px auto;
+        padding: 30px;
+        text-align: center;
+       }
     </style>
 </head>
 <body>
     
-     
+    <div class="camada1">
+        Camada 1
+    </div>  
+
+    <div class="camada2">
+        Camada 2
+    </div>
+
+    <div class="camada3">
+        Camada 3
+    </div>
+
+    <div class="camada4">
+        Camada 4
+    </div>
+
+    <a href="index.html">Voltar</a>
 
 </body>
 </html>
