--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -40,6 +40,18 @@
             height: 300px;
             background-color: rgb(240, 198, 207);
         }
+
+        a
+        {
+            color: white;
+            text-decoration: none;
+        }
+
+        a:hover
+        {
+            text-decoration: underline;
+            text-decoration-color: brown;
+        }
     </style>
 </head>
 <body>
@@ -49,17 +61,14 @@
        <div><img src="eteclogo.png" width="200px"></div>
 
        <div class="menu">
-         <div>Mtec</div>
-         <div>Técnico</div>
+         <div><a href="exercicio1.html">Exercício 1</a></div>
+         <div><a href="exercicio2.html">Exercício 2</a></div>
+         <div><a href="exercicio3.html">Exercício 3</a></div>
+         <div><a href="exercicio4.html">Exercício 4</a></div>
+         <div><a href="exercicio5.html">Exercício 5</a></div>
        </div>
      </div>
      
-     <div class="testes">
-        <div>Teste 1</div>
-        <div>Teste 2</div>
-        <div>Teste 3</div>
-        <div>Teste 4</div>
-        <div>Teste 5</div>
-     </div>
+
 </body>
 </html>
